== 0.9.6 / ???

* Support syntax sugar for initializing lattices (#294). For example, rather
  than writing "foo <= Bud::MaxLattice.new(2)", you can now just write "foo <=
  2". Note that, due to a bug in the superator gem, you cannot use this syntax
  with the <+ operator.
* Support "Comparable" for Bud::Lattice values
* Add support for lattices to rebl
* Reject attempts to insert into stdio via <+ (#288)
* Restore functionality of reading from stdio (i.e., stdin) with MRI 1.9
* Improve MRI 1.8 compatibility
* Require ruby_parser >= 3.1.0
* Fix bug in bootstrap blocks for lattice values
* Fix bug in rescan/invalidation for rules that reference lattice values and use
  the <+ or <~ operators (#290)
* Fix bug in rescan logic for notin operator (#291)
* Fix bug in notin operators involving self joins (#298)
* Fix error when output from a notin operator was fed into a lattice

== 0.9.5 / 2012-11-24

* Lattice branch (Bloom^L) merged
* Compatibility with recent versions of ruby_parser (3.0.2+) and ruby2ruby
  (2.0.1+). Older versions of these two gems are no longer supported
* Add support for aggregate functions that take multiple input columns
* Add built-in aggregate function accum_pair(x, y), which produces a Set of
  pairs (two-element arrays [x,y])
* Support user-specified code blocks in payloads(), argagg(), argmin() and
  argmax()
* Change behavior of BudChannel#payloads for channels with two
  columns. Previously we returned a single *column* (scalar) value in this case;
  now we always return a tuple with k-1 columns
* More consistent behavior for BudCollection#sort when used outside Bloom
  programs
* Restore support for each_with_index() over Bud collections
* Restore functionality of Zookeeper-backed Bud collections and fix
  incompatibility with recent (> 0.4.4) versions of the Zookeeper gem
* Optimize parsing of Bloom statements, particularly for large Bloom programs
* Fix bug in argagg state materialization